--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header class="container-fluid">
 
-            <a class="home" href="">C# + Unity</a>
+            <a class="home" href="index.html">C# + Unity</a>
 
         </header>
         <nav class="nav flex-column">
