--- a/tutorial.html
+++ b/tutorial.html
@@ -22,7 +22,7 @@
 
         <header class="container-fluid">
 
-            <a class="home" href="">C# + Unity</a>
+            <a class="home" href="index.html">C# + Unity</a>
 
         </header>
         <nav class="nav flex-column">
@@ -54,7 +54,59 @@
                     </ul>
 
                 </div>
-               
+                <div class="titles">
+
+                    <h3 class="h3">Creating Your First Project and Looking at the UI</h3>
+
+                </div>
+                <div class="text-layout">
+
+                    <ul>
+                        <li>Go to Projects and select New Project. Create a new 2D Project, name it whatever
+                        you want.
+                        </li>
+                        <li>Here's some important features of Unity's UI.</li>
+                        <ol class="ol">
+                            <li>Scene View: This is where you design and arrange your game's elements in a 3D 
+                            or 2D environment.
+                            </li>
+
+                            <img class="images" src="tutorial-images/SceneView.png">
+
+                            <li>Game View: Allows you to see how your game will look and behave to players.</li>
+
+                            <img class="images" src="tutorial-images/GameView.png">
+
+                            <li>Hierarchy: Displays a list of all the objects in your current scene.</li>
+
+                            <img class="images" src="tutorial-images/Hierarchy.png">
+
+                            <li>Inspect: Provides ddetailed information about the currently selected object
+                            allowing you to edit its properties.
+                            </li>
+
+                            <img class="images" src="tutorial-images/Inspect.png">
+
+                            <li>Project Window: Displays all the assets in your project, such as scripts, textures, 
+                            and models.
+                            </li>
+
+                            <img class="images" src="tutorial-images/ProjectWindow.png">
+
+                            <li>Asset Store: Access to a vast library of free and paid assets, including scripts, 
+                            textures, and models to enhance your game.
+                            </li>
+
+                            <img class="images" src="tutorial-images/AssetStore.png">
+
+                            <li>Toolbar: Contains various tools for manipulating objects, navigating the scene, and 
+                            controlling the editor's view.</li>
+
+                            <img class="images" src="tutorial-images/Toolbar.png">
+                        </ol>
+                    </ul>
+
+                </div>
             </div>
         </div>
 
