--- a/physics.html
+++ b/physics.html
@@ -24,7 +24,7 @@
         <header class="container-fluid">
 
             <a class="home" href="index.html">C# + Unity</a>
-            
+
             <i class="fa-regular fa-sun" onclick="nightModeToggle()" id="sun" title="Toggle Night Mode"></i>
             <i class="fa-regular fa-moon" onclick="nightModeToggle()" id="moon" title="Toggle Night Mode"></i>
 
@@ -38,23 +38,24 @@
 
             <div class="dropdown" id="dropdown">
 
-                <a href="physics.html" class="nav-link">2D Physics</a>
+                <a href="physics.html" class="nav-link current-page">2D Physics</a>
 
             </div>
         </nav>
 
-        <div class="right-side"></div>
-
         <div class="top-btns">
-            <a href="" class="btn btn-success btn-top-left">< Previous</a>
-            <a href="" class="btn btn-success btn-top-right">Next ></a>
+            <a href="objects.html" class="btn btn-success btn-top-left">< Previous</a>
+            <a href="objects.html" class="btn btn-success btn-top-right">Next ></a>
         </div>
+
+        <div class="right-side"></div>
 
         <div class="explanation" id="text">
             <div class="content">
                 <div class="titles">
 
-                    <h1></h1>
+                    <h1>Introduction to Physics</h1>
+                    <h3></h3>
 
                 </div>
                 <div class="text-layout">
@@ -66,8 +67,8 @@
         </div>
 
         <div class="bottom-btns">
-            <a href="" class="btn btn-success btn-bottom-left">< Previous</a>
-            <a href="" class="btn btn-success btn-bottom-right">Next ></a>
+            <a href="objects.html" class="btn btn-success btn-bottom-left">< Previous</a>
+            <a href="objects.html" class="btn btn-success btn-bottom-right">Next ></a>
         </div>
 
         <script src="script.js" async defer></script>
