--- a/index.html
+++ b/index.html
@@ -16,22 +16,40 @@
         <link rel="stylesheet" href="style.css">
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+        <script src="https://kit.fontawesome.com/eade4dcf70.js" crossorigin="anonymous"></script>
+        
     </head>
-    <body>
+    <body id="body">
 
         <header class="container-fluid">
 
-            <a class="home" href="index.html">C# + Unity</a>
+            <a class="home" href="">C# + Unity</a>
+
+            <i class="fa-regular fa-sun" onclick="nightModeToggle()" id="sun" title="Toggle Night Mode"></i>
+            <i class="fa-regular fa-moon" onclick="nightModeToggle()" id="moon" title="Toggle Night Mode"></i>
 
         </header>
-        <nav class="nav flex-column">
+        <nav class="nav flex-column" id="nav">
 
-            <a href="index.html" class="nav-link">Intro</a>
+            <a href="index.html" class="nav-link current-page">Intro</a>
             <a href="tutorial.html" class="nav-link">Tutorial</a>
+            <a href="objects.html" class="nav-link">Objects & Components</a>
+            <a class="nav-link" onclick="toggleDropdown2D()">2D <i class="fa-solid fa-chevron-down"></i></a> 
 
+            <div class="dropdown" id="dropdown">
+
+                <a href="physics.html" class="nav-link">2D Physics</a>
+
+            </div>
         </nav>
-        <div class="explanation">
+
+        <div class="right-side"></div>
+
+        <div class="top-btns">
+            <a href="tutorial.html" class="btn btn-success btn-top-right">Next ></a>
+        </div>
+
+        <div class="explanation" id="text">
             <div class="content">
                 <div class="titles">
 
@@ -74,6 +92,10 @@
 
                 </div>
             </div>
+        </div>
+
+        <div class="bottom-btns">
+            <a href="tutorial.html" class="btn btn-success btn-bottom-right">Next ></a>
         </div>
 
         <script src="script.js" async defer></script>
