--- a/tutorial.html
+++ b/tutorial.html
@@ -16,22 +16,41 @@
         <link rel="stylesheet" href="style.css">
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/eade4dcf70.js" crossorigin="anonymous"></script>
 
     </head>
-    <body>
+    <body id="body">
 
         <header class="container-fluid">
 
             <a class="home" href="index.html">C# + Unity</a>
 
+            <i class="fa-regular fa-sun" onclick="nightModeToggle()" id="sun" title="Toggle Night Mode"></i>
+            <i class="fa-regular fa-moon" onclick="nightModeToggle()" id="moon" title="Toggle Night Mode"></i>
+
         </header>
-        <nav class="nav flex-column">
+        <nav class="nav flex-column" id="nav">
 
             <a href="index.html" class="nav-link">Intro</a>
-            <a href="tutorial.html" class="nav-link">Tutorial</a>
+            <a href="tutorial.html" class="nav-link current-page">Tutorial</a>
+            <a href="objects.html" class="nav-link">Objects & Components</a>
+            <a class="nav-link" onclick="toggleDropdown2D()">2D <i class="fa-solid fa-chevron-down"></i></a> 
 
+            <div class="dropdown" id="dropdown">
+
+                <a href="physics.html" class="nav-link">2D Physics</a>
+
+            </div>
         </nav>
-        <div class="explanation">
+
+        <div class="right-side"></div>
+
+        <div class="top-btns">
+            <a href="index.html" class="btn btn-success btn-top-left">< Previous</a>
+            <a href="objects.html" class="btn btn-success btn-top-right">Next ></a>
+        </div>
+
+        <div class="explanation" id="text">
             <div class="content">
                 <div class="titles">
 
@@ -42,18 +61,19 @@
                 <div class="text-layout">
 
                     <ul>
-                        <li>Go to <a href="https://unity.com/download#how-get-started" target="_blank">https://unity.com/download#how-get-started</a> 
+                        <li>Go to <a href="https://unity.com/download#how-get-started" target="_blank" class="links">https://unity.com/download#how-get-started</a> 
                         and download the unity hub installer.</li>
                         <li>Sign in or create an account if you don't have one and install the editor.</li>
                         <li>A download of the community edition of Visual Studio will be included, but 
                         you could also Visual Studio Code.
                         </li>
-                        <li>If you using Visual Studio Code, go to extensions "Ctrl+Shift+X" and download 
+                        <li>If you're using Visual Studio Code, go to extensions "Ctrl+Shift+X" and download 
                         the extension C# made by Microsoft.
                         </li>
                     </ul>
 
                 </div>
+             
                 <div class="titles">
 
                     <h3 class="h3">Creating Your First Project and Looking at the UI</h3>
@@ -62,7 +82,7 @@
                 <div class="text-layout">
 
                     <ul>
-                        <li>Go to Projects and select New Project. Create a new 2D Project, name it whatever
+                        <li>Go to Projects and select New Project. Create a new 2D Project with the Built-In Render Pipeline, name it whatever
                         you want.
                         </li>
                         <li>Here's some important features of Unity's UI.</li>
@@ -105,9 +125,13 @@
                             <img class="images" src="tutorial-images/Toolbar.png">
                         </ol>
                     </ul>
-
                 </div>
             </div>
+        </div>
+
+        <div class="bottom-btns">
+            <a href="index.html" class="btn btn-success btn-bottom-left">< Previous</a>
+            <a href="objects.html" class="btn btn-success btn-bottom-right">Next ></a>
         </div>
 
         <script src="script.js" async defer></script>
