--- a/tutorial.html
+++ b/tutorial.html
@@ -25,10 +25,19 @@
 
             <a class="home" href="index.html">C# + Unity</a>
 
+            <i class="fa-solid fa-bars" onclick="toggleNav()"></i>
+
             <i class="fa-regular fa-sun" onclick="nightModeToggle()" id="sun" title="Toggle Night Mode"></i>
             <i class="fa-regular fa-moon" onclick="nightModeToggle()" id="moon" title="Toggle Night Mode"></i>
 
         </header>
+
+        <div class="mob-nav-container">
+
+            
+
+        </div>
+
         <nav class="nav flex-column" id="nav">
 
             <a href="index.html" class="nav-link">Intro</a>
